--- a/docker/flask/Dockerfile
+++ b/docker/flask/Dockerfile
@@ -1,9 +1,6 @@
-FROM alpine:latest
-RUN apk update
-RUN apk add py-pip
-RUN apk add --no-cache python3-dev
+FROM python:3.11.1-bullseye
 RUN pip install --upgrade pip
 WORKDIR /app
-COPY ../../../.. /app
+COPY . /app
 RUN pip --no-cache-dir install -r requirements.txt
-CMD ["python3", "api/main.py"]
+CMD ["python3", "api.py"]
