refactor(api): docker launch python with -u parameter

--- a/docker/flask/Dockerfile
+++ b/docker/flask/Dockerfile
@@ -3,4 +3,4 @@ RUN pip install --upgrade pip
 WORKDIR /app
 COPY . /app
 RUN pip --no-cache-dir install -r requirements.txt
-CMD ["python3", "api.py"]
+CMD ["python3", "-u", "api.py"]
