--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  flask_api:
+  flask-api:
     build:
       context: .
       dockerfile: ./docker/flask/Dockerfile
@@ -8,3 +8,19 @@ services:
      - "5000:5000"
     volumes:
      - .:/code
+  scraper:
+    build:
+      context: .
+      dockerfile: ./docker/scraper/Dockerfile
+    volumes:
+      - .:/code
+#  ofelia-scheduler:
+#    image: mcuadros/ofelia:latest
+#    command: daemon --docker
+#    volumes:
+#      - /var/run/docker.sock:/var/run/docker.sock:ro
+#    labels:
+#      ofelia.job-exec.spark-script.container: "architecture-bdd-scraper-1"
+#      ofelia.job-exec.spark-script.schedule: "@every 5m"
+#      ofelia.job-exec.spark-script.command: "python ./main.py"
+#      ofelia.job-exec.spark-script.option: "no-overlap"
